--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
-* {
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
+.grid-container {
+     display:flex;
+    flex-wrap: wrap;
+    width: 800px;
+    height: 800px;
+    /*border: 1px solid black;*/
 }
 
 .square {
-    width: 60px;
-    height: 60px;
-    border: 1px solid black;
+    border: 1px solid black;    
+    background-color:antiquewhite;
+    box-sizing: border-box;
 }
 
-.grid-container {
-    width: 960px;
-}
