--- a/style.css
+++ b/style.css
@@ -1,14 +1,25 @@
 .grid-container {
-     display:flex;
+    display:flex;
     flex-wrap: wrap;
     width: 800px;
-    height: 800px;
-    /*border: 1px solid black;*/
+    height: 800px;          
+    margin   : 0 auto; 
+    margin-top: 50px;     
 }
 
 .square {
     border: 1px solid black;    
-    background-color:antiquewhite;
+    background-color:lightyellow;
     box-sizing: border-box;
 }
+
+h2 {
+    text-align: center;
+}
+
+.btn {
+    text-align: center;
+}
+
+
 
