--- a/style.css
+++ b/style.css
@@ -1,47 +1,47 @@
 .grid-container {
     display:flex;
     flex-wrap: wrap;
-    width: 800px;
-    height: 800px;          
+    width: 600px;
+    height: 600px;          
     margin   : 0 auto; 
     margin-top: 50px;     
 }
 
 .square {
     border: 1px solid black;    
-    background-color:lightyellow;
     box-sizing: border-box;
+    background-color: lightcyan;   
 }
 
-.square:hover {
-    display: block;
-    background-color: red; 
-    /*opacity: 1;*/
-    /*transition: 2s */ 
+.square.hovered {
+    background-color: salmon; 
 }
+
 
 h2 {
     text-align: center;
-    color:brown;
+    color: black;
 }
 
 .btn {
-    text-align: center;    
+    text-align: center;       
 }
 
 span {
-    color:brown;
+    color:black;
     font-weight: bold;
-    font-size: 17px;
+    font-size: 17px;    
 }
 
 button {
-   width: 100px;
+   width: 150px;
    height: 30px; 
+   border-radius: 10px;
+   background-color: beige;
 }
 
 body {
-    background-color: antiquewhite;
+    background-color: beige
 }
 
 
